--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
                 <span class="m-icon">location_on</span>
 
                 <div>
-                  <p class="item-title">London</p>
+                  <p class="item-title">Johannesburg</p>
 
-                  <p class="label-2 item-subtitle">State of London, GB</p>
+                  <p class="label-2 item-subtitle">Johannesburg, GP</p>
                 </div>
 
                 <a href="#" class="item-link has-state" data-search-toggler></a>
@@ -113,14 +113,497 @@
                 <p class="heading">25&deg;<sup>c</sup></p>
                 <img
                   src="./assets/images/weather_icons/01d.png"
-                  alt=""
+                  alt="Overcast Clouds"
                   class="weather-icon"
+                  width="64"
+                  height="64"
                 />
               </div>
+
+              <p class="body-3">Overcast Clouds</p>
+              <ul class="meta-list">
+                <li class="meta-item">
+                  <span class="m-icon">calendar_today</span>
+                  <p class="title-3 meta-text">Saturday 05, Apr</p>
+                </li>
+
+                <li class="meta-item">
+                  <span class="m-icon">location_on</span>
+                  <p class="title-3 meta-text">Johannesburg, GP</p>
+                </li>
+              </ul>
+            </div>
+          </section>
+
+          <!--Forecast Weather-->
+          <section
+            class="section forecast"
+            aria-label="forecast"
+            data-5-day-forecast
+          >
+            <h2 class="title-2" id="forecast-label">5 Day Forecast</h2>
+
+            <div class="card card-lg forecast-card">
+              <ul>
+                <li class="card-item">
+                  <div class="icon-wrapper">
+                    <img
+                      src="./assets//images/weather_icons/01n.png"
+                      alt="Overcast Clouds"
+                      class="weather-icon"
+                      width="36"
+                      height="36"
+                    />
+
+                    <span class="span">
+                      <p class="title-2">25</p>
+                    </span>
+                  </div>
+
+                  <p class="label-1">06 Apr</p>
+                  <p class="label-1">Sunday</p>
+                </li>
+
+                <li class="card-item">
+                  <div class="icon-wrapper">
+                    <img
+                      src="./assets//images/weather_icons/01n.png"
+                      alt="Overcast Clouds"
+                      class="weather-icon"
+                      width="36"
+                      height="36"
+                    />
+
+                    <span class="span">
+                      <p class="title-2">25</p>
+                    </span>
+                  </div>
+
+                  <p class="label-1">07 Apr</p>
+                  <p class="label-1">Monday</p>
+                </li>
+
+                <li class="card-item">
+                  <div class="icon-wrapper">
+                    <img
+                      src="./assets//images/weather_icons/01n.png"
+                      alt="Overcast Clouds"
+                      class="weather-icon"
+                      width="36"
+                      height="36"
+                    />
+
+                    <span class="span">
+                      <p class="title-2">25</p>
+                    </span>
+                  </div>
+
+                  <p class="label-1">08 Apr</p>
+                  <p class="label-1">Tuesday</p>
+                </li>
+
+                <li class="card-item">
+                  <div class="icon-wrapper">
+                    <img
+                      src="./assets//images/weather_icons/01n.png"
+                      alt="Overcast Clouds"
+                      class="weather-icon"
+                      width="36"
+                      height="36"
+                    />
+
+                    <span class="span">
+                      <p class="title-2">25</p>
+                    </span>
+                  </div>
+
+                  <p class="label-1">09 Apr</p>
+                  <p class="label-1">Wednesday</p>
+                </li>
+
+                <li class="card-item">
+                  <div class="icon-wrapper">
+                    <img
+                      src="./assets//images/weather_icons/01n.png"
+                      alt="Overcast Clouds"
+                      class="weather-icon"
+                      width="36"
+                      height="36"
+                    />
+
+                    <span class="span">
+                      <p class="title-2">25</p>
+                    </span>
+                  </div>
+
+                  <p class="label-1">10 Apr</p>
+                  <p class="label-1">Thursday</p>
+                </li>
+              </ul>
             </div>
           </section>
         </div>
+
+        <div class="content-right">
+          <!--Highlights-->
+          <section
+            class="section highlights"
+            aria-labelledby="highlights-label"
+            data-highlights
+          >
+            <div class="card card-lg">
+              <h2 class="title-2" id="highlights-label">Today's Highlights</h2>
+              <div class="higlight-list">
+                <div class="card card-sm highlight-card one">
+                  <h3 class="title-3">Air Quality Index</h3>
+                  <div class="wrapper">
+                    <span class="m-icon">air</span>
+                    <ul class="card-list">
+                      <li class="card-item">
+                        <p class="title-1">23.3</p>
+                        <p class="label-1">PM<sub>2.5</sub></p>
+                      </li>
+
+                      <li class="card-item">
+                        <p class="title-1">23.3</p>
+                        <p class="label-1">PM<sub>2.5</sub></p>
+                      </li>
+
+                      <li class="card-item">
+                        <p class="title-1">23.3</p>
+                        <p class="label-1">PM<sub>2.5</sub></p>
+                      </li>
+
+                      <li class="card-item">
+                        <p class="title-1">23.3</p>
+                        <p class="label-1">PM<sub>2.5</sub></p>
+                      </li>
+                    </ul>
+                  </div>
+
+                  <span class="badge aqi-1 label-1" title="aqi message">
+                    Good
+                  </span>
+                </div>
+
+                <div class="card card-sm highlight-card two">
+                  <h3 class="title-3">Sunrise & Sunset</h3>
+                  <div class="card-list">
+                    <div class="card-item">
+                      <span class="m-icon">clear_day</span>
+                      <div class="label-1">
+                        <p class="label-1">Sunrise</p>
+                        <p class="title-1">6:30 AM</p>
+                      </div>
+                    </div>
+
+                    <div class="card-item">
+                      <span class="m-icon">clear_night</span>
+                      <div class="label-1">
+                        <p class="label-1">Sunset</p>
+                        <p class="title-1">6:00 PM</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="card card-sm highlight-card">
+                  <h3 class="title-3">Humidity</h3>
+                  <div class="wrapper">
+                    <span class="m-icon">humidity_percentage</span>
+                    <p class="title-1">35<sub>%</sub></p>
+                  </div>
+                </div>
+
+                <div class="card card-sm highlight-card">
+                  <h3 class="title-3">Pressure</h3>
+                  <div class="wrapper">
+                    <span class="m-icon">airways</span>
+                    <p class="title-1">1052<sub>hPa</sub></p>
+                  </div>
+                </div>
+
+                <div class="card card-sm highlight-card">
+                  <h3 class="title-3">Visibility</h3>
+                  <div class="wrapper">
+                    <span class="m-icon">visibility</span>
+                    <p class="title-1">10<sub>km</sub></p>
+                  </div>
+                </div>
+
+                <div class="card card-sm highlight-card">
+                  <h3 class="title-3">Feels Like</h3>
+                  <div class="wrapper">
+                    <span class="m-icon">thermostat</span>
+                    <p class="title-1">25&deg;<sub>c</sub></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+
+          <!--Hourly Forecast-->
+          <section
+            class="section hourly-forecast"
+            aria-label="hourly forecast"
+            data-hourly-forecast
+          >
+            <h2 class="title-2">Today at</h2>
+
+            <div class="slider-container">
+              <ul class="slider-list" data-temp>
+                <li class="slider-item">
+                  <div class="card card-sm slider-card">
+                    <p class="body-3">15:00 PM</p>
+                    <img
+                      src="./assets/images/weather_icons/01n.png"
+                      width="48"
+                      height="48"
+                      loading="lazy"
+                      alt=""
+                      class="weather-icon"
+                      title=""
+                    />
+
+                    <p class="body-3">25&deg;</p>
+                  </div>
+                </li>
+
+                <li class="slider-item">
+                  <div class="card card-sm slider-card">
+                    <p class="body-3">15:00 PM</p>
+                    <img
+                      src="./assets/images/weather_icons/01n.png"
+                      width="48"
+                      height="48"
+                      loading="lazy"
+                      alt=""
+                      class="weather-icon"
+                      title=""
+                    />
+
+                    <p class="body-3">25&deg;</p>
+                  </div>
+                </li>
+
+                <li class="slider-item">
+                  <div class="card card-sm slider-card">
+                    <p class="body-3">15:00 PM</p>
+                    <img
+                      src="./assets/images/weather_icons/01n.png"
+                      width="48"
+                      height="48"
+                      loading="lazy"
+                      alt=""
+                      class="weather-icon"
+                      title=""
+                    />
+
+                    <p class="body-3">25&deg;</p>
+                  </div>
+                </li>
+
+                <li class="slider-item">
+                  <div class="card card-sm slider-card">
+                    <p class="body-3">15:00 PM</p>
+                    <img
+                      src="./assets/images/weather_icons/01n.png"
+                      width="48"
+                      height="48"
+                      loading="lazy"
+                      alt=""
+                      class="weather-icon"
+                      title=""
+                    />
+
+                    <p class="body-3">25&deg;</p>
+                  </div>
+                </li>
+
+                <li class="slider-item">
+                  <div class="card card-sm slider-card">
+                    <p class="body-3">15:00 PM</p>
+                    <img
+                      src="./assets/images/weather_icons/01n.png"
+                      width="48"
+                      height="48"
+                      loading="lazy"
+                      alt=""
+                      class="weather-icon"
+                      title=""
+                    />
+
+                    <p class="body-3">25&deg;</p>
+                  </div>
+                </li>
+
+                <li class="slider-item">
+                  <div class="card card-sm slider-card">
+                    <p class="body-3">15:00 PM</p>
+                    <img
+                      src="./assets/images/weather_icons/01n.png"
+                      width="48"
+                      height="48"
+                      loading="lazy"
+                      alt=""
+                      class="weather-icon"
+                      title=""
+                    />
+
+                    <p class="body-3">25&deg;</p>
+                  </div>
+                </li>
+              </ul>
+
+              <ul class="slider-list" data-wind>
+                <li class="slider-item">
+                  <div class="card card-sm slider-card">
+                    <p class="body-3">15:00 PM</p>
+
+                    <img
+                      src="./assets//images//weather_icons/direction.png"
+                      height="48"
+                      width="48"
+                      loading="lazy"
+                      alt=""
+                      class="weather-icon"
+                      title=""
+                    />
+
+                    <p class="body-3">12 km/h</p>
+                  </div>
+                </li>
+
+                <li class="slider-item">
+                  <div class="card card-sm slider-card">
+                    <p class="body-3">15:00 PM</p>
+
+                    <img
+                      src="./assets//images//weather_icons/direction.png"
+                      height="48"
+                      width="48"
+                      loading="lazy"
+                      alt=""
+                      class="weather-icon"
+                      title=""
+                    />
+
+                    <p class="body-3">12 km/h</p>
+                  </div>
+                </li>
+
+                <li class="slider-item">
+                  <div class="card card-sm slider-card">
+                    <p class="body-3">15:00 PM</p>
+
+                    <img
+                      src="./assets//images//weather_icons/direction.png"
+                      height="48"
+                      width="48"
+                      loading="lazy"
+                      alt=""
+                      class="weather-icon"
+                      title=""
+                    />
+
+                    <p class="body-3">12 km/h</p>
+                  </div>
+                </li>
+
+                <li class="slider-item">
+                  <div class="card card-sm slider-card">
+                    <p class="body-3">15:00 PM</p>
+
+                    <img
+                      src="./assets//images//weather_icons/direction.png"
+                      height="48"
+                      width="48"
+                      loading="lazy"
+                      alt=""
+                      class="weather-icon"
+                      title=""
+                    />
+
+                    <p class="body-3">12 km/h</p>
+                  </div>
+                </li>
+
+                <li class="slider-item">
+                  <div class="card card-sm slider-card">
+                    <p class="body-3">15:00 PM</p>
+
+                    <img
+                      src="./assets//images//weather_icons/direction.png"
+                      height="48"
+                      width="48"
+                      loading="lazy"
+                      alt=""
+                      class="weather-icon"
+                      title=""
+                    />
+
+                    <p class="body-3">12 km/h</p>
+                  </div>
+                </li>
+
+                <li class="slider-item">
+                  <div class="card card-sm slider-card">
+                    <p class="body-3">15:00 PM</p>
+
+                    <img
+                      src="./assets//images//weather_icons/direction.png"
+                      height="48"
+                      width="48"
+                      loading="lazy"
+                      alt=""
+                      class="weather-icon"
+                      title=""
+                    />
+
+                    <p class="body-3">12 km/h</p>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </section>
+
+          <!--Footer-->
+          <footer class="footer">
+            <p class="body-3">
+              Copyright &copy; 2025 Ntshuxeko. All Rights Reserved.
+            </p>
+
+            <p class="body-3">
+              Powered By
+              <a
+                href="https://openweathermap.org.api"
+                title="Free OpenWeather API"
+                target="_blank"
+                rel="noopener"
+              >
+                <img
+                  src="./assets//images/openweather.png"
+                  width="150"
+                  height="30"
+                  loading="lazy"
+                  alt="OpenWeather"
+                />
+              </a>
+            </p>
+          </footer>
+        </div>
+
+        <div class="loading" data-loading></div>
       </article>
     </main>
+
+    <!-- 404 Error Section-->
+    <section class="error-content" data-error-content>
+      <h2 class="heading">404</h2>
+      <p class="body-1">Page Not Found!</p>
+      <a href="#" class="btn-primary">
+        <span class="span">Go Home</span>
+      </a>
+    </section>
   </body>
 </html>
